--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-intersection-observer": "^9.5.2",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.15.0",
+    "react-simple-star-rating": "^5.1.7",
     "react-toastify": "^9.1.3",
     "react-webcam": "^7.1.1",
     "zustand": "^4.4.1"
