--- a/package.json
+++ b/package.json
@@ -16,20 +16,31 @@
     "@fullcalendar/daygrid": "^6.1.8",
     "@fullcalendar/interaction": "^6.1.8",
     "@fullcalendar/react": "^6.1.8",
+    "@mediapipe/face_mesh": "^0.4.1633559619",
     "@mui/icons-material": "^5.14.8",
     "@mui/material": "^5.14.8",
     "@mui/x-date-pickers": "^6.14.0",
+    "@tensorflow-models/face-landmarks-detection": "^0.0.3",
+    "@tensorflow/tfjs": "^4.11.0",
+    "@tensorflow/tfjs-backend-webgl": "^3.6.0",
+    "@tensorflow/tfjs-converter": "^3.6.0",
+    "@tensorflow/tfjs-core": "^3.6.0",
+    "@types/react-html5-camera-photo": "^1.5.1",
+    "@types/react-webcam": "^3.0.0",
     "@wojtekmaj/react-datetimerange-picker": "^5.4.4",
     "axios": "^1.5.0",
     "dayjs": "^1.11.9",
+    "face-api.js": "^0.22.2",
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-html5-camera-photo": "^1.5.11",
     "react-intersection-observer": "^9.5.2",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.15.0",
     "react-simple-star-rating": "^5.1.7",
     "react-toastify": "^9.1.3",
+    "react-webcam": "^7.1.1",
     "zustand": "^4.4.1"
   },
   "devDependencies": {
